--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 auto: true
 server: true
+theme: jekyll-theme-cayman
 markdown: kramdown
 server_port: 3000
 pygments: false
@@ -8,6 +9,6 @@ permalink: /:year/:month/:day/:title.html
 #paginate: 10
 name: byKG  
 description: Kevin Gailey Bio
-url: http://kevingailey.com
+url: http://by.kevingailey.com
 rss: http://kevingailey.com/feed.xml
 logo: http://kevingailey.com/img/W5-lights.png
