--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 auto: true
 server: true
-theme: jekyll-theme-cayman
+theme: jekyll-theme-slate
 markdown: kramdown
 server_port: 3000
 pygments: false
